awsconfigs/common/istio-ingress/overlays/oidc/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: istio-ingress
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/certificate-arn: $(certArn)
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}]'
    alb.ingress.kubernetes.io/auth-type: oidc
    alb.ingress.kubernetes.io/auth-idp-oidc: '{"issuer":"$(oidcIssuer)","authorizationEndpoint":"$(oidcAuthorizationEndpoint)","tokenEndpoint":"$(oidcTokenEndpoint)","userInfoEndpoint":"$(oidcUserInfoEndpoint)","secretName":"istio-oidc-secret"}'
    alb.ingress.kubernetes.io/auth-scope: 'email openid profile'
